# llama-cpp-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: publish-upon-release.yml  update-llama-cpp.yml  update-toml-version.yaml
examples/: common.rs  usage.rs
examples/chat/: Cargo.toml
examples/chat/src/: main.rs
examples/embeddings/: Cargo.toml
examples/embeddings/src/: main.rs
examples/simple/: Cargo.toml
examples/simple/src/: main.rs
llama-cpp-2/: Cargo.toml  README.md
llama-cpp-2/src/: context.rs  grammar.rs  lib.rs  timing.rs  token.rs
llama-cpp-2/src/context/: params.rs  perf.rs  sample.rs  sampler.rs
llama-cpp-2/src/grammar/: tests.rs
llama-cpp-2/src/token/: data_array.rs
llama-cpp-4/: Cargo.toml  README.md
llama-cpp-4/src/: common.rs  context.rs  lib.rs  llama_backend.rs  llama_batch.rs  model.rs  sampling.rs  token.rs
llama-cpp-4/src/context/: kv_cache.rs  params.rs  perf.rs  sampler.rs  session.rs
llama-cpp-4/src/model/: params.rs
llama-cpp-4/src/model/params/: kv_overrides.rs
llama-cpp-4/src/token/: data.rs  data_array.rs
llama-cpp-sys-2/: Cargo.toml  README.md  build.rs  wrapper.h
llama-cpp-sys-2/src/: common.rs  lib.rs
llama-cpp-sys-4/: Cargo.toml  README.md  build.rs  wrapper.h
llama-cpp-sys-4/src/: bindings.rs
