[workspace]
resolver = "2"
members = [
    "llama-cpp-sys-4",
    "llama-cpp-4",
    "examples/embeddings",
    "examples/simple",
    "examples/chat",
]

[workspace.dependencies]
# core library deps
thiserror = "2.0.6"
tracing = "0.1"

# examples and benchmarks
hf-hub = { version = "0.3.2" }
criterion = "0.5.1"
pprof = "0.14.0"
bindgen = "0.70.1"
cc = "1.2.4"
anyhow = "1.0.94"
clap = "4.5.23"
encoding_rs = "0.8.35"

[workspace.lints.rust]
missing_docs = { level = "warn" }
missing_debug_implementations = { level = "warn" }

[workspace.lints.clippy]
pedantic = { level = "warn" }
