[package]
name = "llama-cpp-4"
description = "llama.cpp bindings for Rust"
version = "0.1.90"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/eugenehp/llama-cpp-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enumflags2 = "0.7.10"
llama-cpp-sys-4 = { path = "../llama-cpp-sys-4", version = "0.1.90" }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
encoding_rs = { workspace = true }

[features]
default = ["openmp"]
cuda = ["llama-cpp-sys-4/cuda"]
metal = ["llama-cpp-sys-4/metal"]
dynamic-link = ["llama-cpp-sys-4/dynamic-link"]
vulkan = ["llama-cpp-sys-4/vulkan"]
native = ["llama-cpp-sys-4/native"]
openmp = ["llama-cpp-sys-4/openmp"]


[target.'cfg(all(target_os = "macos", any(target_arch = "aarch64", target_arch = "arm64")))'.dependencies]
llama-cpp-sys-4 = { path = "../llama-cpp-sys-4", version = "0.1.69", features = [
    "metal",
] }

[lints]
workspace = true

[package.metadata.docs.rs]
features = ["sampler"]

[[example]]
name = "usage"
path = "../examples/usage.rs"

[[example]]
name = "common"
path = "../examples/common.rs"
