[package]
name = "chat"
version = "0.1.91"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
llama-cpp-4 = { path = "../../llama-cpp-4", version = "0.1.91" }
llama-cpp-sys-4 = { path = "../../llama-cpp-sys-4", version = "0.1.91" }
hf-hub = { workspace = true }
clap = { workspace = true , features = ["derive"] }
anyhow = { workspace = true }
encoding_rs = { workspace = true }
colored = "3.0.0"

[features]
cuda = ["llama-cpp-4/cuda"]
metal =  ["llama-cpp-4/metal"]
native = ["llama-cpp-4/native"]
vulkan = ["llama-cpp-4/vulkan"]

[lints]
workspace = true
