[package]
name = "embeddings"
version = "0.1.90"
edition = "2021"

[dependencies]
llama-cpp-4 = { path = "../../llama-cpp-4", version = "0.1.90" }
hf-hub = { workspace = true }
clap = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }

[features]
cuda = ["llama-cpp-4/cuda"]
metal = ["llama-cpp-4/metal"]
native = ["llama-cpp-4/native"]
vulkan = ["llama-cpp-4/vulkan"]

[lints]
workspace = true
